<resources>
    <string name="app_name">Image Tester</string>
    <string name="edit_btnBuild">Build</string>
    <string name="edit_imgLeft_desc">The source image to morph from.</string>
    <string name="edit_imgRight_desc">The destination image to morph to.</string>
    <string name="edit_imgEdit_desc">Image to draw upon.</string>
    <string name="edit_btnSave">Save</string>
    <string name="edit_btnOpen">Open</string>
    <string name="title_activity_display_results">Results</string>


    <string name="settings_num_frames">How many frames total in the transition.</string>
    <string name="settings_num_frames_default">50</string>
    <string name="settings_weights_a">Small value added, to prevent division by 0. Larger values blur the warp. a &gt; 0</string>
    <string name="settings_weights_a_default">0.03</string>
    <string name="settings_weights_b">Distance falloff exponent. Larger numbers result in tighter warps. 1 &lt;= b &lt;= 2</string>
    <string name="settings_weights_b_default">1.1</string>
    <string name="settings_weights_p">Line length effect. Non-zero values will cause the length of a control line to affect it\'s influence radius. 0 &lt;= P &lt;= 1</string>
    <string name="settings_weights_p_default">0.0</string>
    <string name="settings_btnRender">Render frames</string>
    <string name="settings_btnView">Play result</string>


    <string name="title_activity_playback">Playback</string>
    <string name="playback_content_description">Image morphing from the original left image to the final right image.</string>
    <string name="playback_stop">| |</string>
    <string name="playback_step_backward">|&lt;|</string>
    <string name="playback_step_forward">|&gt;|</string>
    <string name="playback_backward">&lt;</string>
    <string name="playback_forward">&gt;</string>
</resources>
