<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joepolygon.warpertoy.ShowImages"
    android:orientation="vertical"
    android:weightSum="14">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#a2d8ff"
            android:background="#86fff7"
            android:weightSum="2"
            android:minHeight="200dp">

            <com.joepolygon.warpertoy.Thumbnail
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgLeft"
                android:layout_weight="1"
                android:contentDescription="@string/edit_imgLeft_desc"
                android:clickable="true"
                android:src="@drawable/test" />

            <com.joepolygon.warpertoy.Thumbnail
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgRight"
                android:layout_weight="1"
                android:contentDescription="@string/edit_imgRight_desc"
                android:contextClickable="false"
                android:clickable="true"
                android:src="@drawable/test" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11">

        <com.joepolygon.warpertoy.EditView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imgEdit"
            android:layout_gravity="center"
            android:contentDescription="@string/edit_imgEdit_desc" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_btnSave"
            android:id="@+id/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="left"
            android:onClick="actionSave"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_btnOpen"
            android:id="@+id/btnOpen"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="center_horizontal"
            android:onClick="actionOpen"
            android:layout_alignParentRight="false"
            android:layout_alignParentLeft="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_btnBuild"
            android:id="@+id/btnBuild"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_gravity="right"
            android:onClick="build"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</LinearLayout>
