<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.joepolygon.imagetest.DisplayResults"
    tools:showIn="@layout/activity_display_results">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_num_frames"
            android:id="@+id/textNumFrames"
            android:textSize="@dimen/settings_text_size"
            android:labelFor="@+id/seekFrames"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="6"
                    android:id="@+id/valFrames"
                    android:textSize="@dimen/settings_text_size"
                    android:numeric="integer"
                    android:text="10"
                    android:tag="frames" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/seekFrames"
                    android:layout_gravity="center_horizontal"
                    android:max="198"
                    android:progress="8"
                    android:tag="frames" />

            </LinearLayout>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_weights_a"
            android:id="@+id/textWeightsA"
            android:textSize="@dimen/settings_text_size"
            android:labelFor="@+id/seekA" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:id="@+id/valA"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/settings_text_size"
                    android:numeric="decimal"
                    android:text="0.3"
                    android:tag="a" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/seekA"
                    android:layout_gravity="center_horizontal"
                    android:max="99"
                    android:progress="29"
                    android:tag="a" />

            </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_weights_b"
            android:id="@+id/textWeightsB"
            android:textSize="@dimen/settings_text_size"
            android:labelFor="@+id/seekB" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:id="@+id/valB"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/settings_text_size"
                    android:numeric="decimal"
                    android:text="2.0"
                    android:tag="b" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/seekB"
                    android:layout_gravity="center_horizontal"
                    android:max="100"
                    android:progress="100"
                    android:tag="b" />

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_weights_p"
            android:id="@+id/textWeightsP"
            android:textSize="@dimen/settings_text_size"
            android:labelFor="@+id/seekP" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:id="@+id/valP"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/settings_text_size"
                    android:numeric="decimal"
                    android:text="0.0"
                    android:tag="P" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/seekP"
                    android:layout_gravity="center_horizontal"
                    android:max="100"
                    android:progress="0"
                    android:tag="P"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btnRender"
                android:id="@+id/btnRender"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="onRender" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressRendering"
                android:progress="0"
                android:max="50"
                android:minHeight="60dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Progress: 2 / 8 (25%)"
                android:id="@+id/progressMessage" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btnView"
                android:id="@+id/btnView"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:onClick="onView" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
